<resources>
    <string name="app_name">BG_Control</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_journal_entry_detail">JournalEntryDetail</string>
    <string name="title_activity_journal_entry_details">JournalEntryDetailsActivity</string>
    <string name="label_activity_journal_entry_details">Save</string>
    <string name="hint_activity_journal_entry_details_food">Food</string>
    <string name="hint_activity_journal_entry_details_carb_count">Carb Count (Estimate)</string>
    <string name="hint_activity_journal_entry_details_starting_bg">Starting BG</string>
    <string name="hint_activity_journal_entry_details_inital_bolus">Bolus Amount (units)</string>
    <string name="hint_activity_journal_entry_details_extended_bolus">Extended Bolus (units)</string>
    <string name="hint_activity_journal_entry_details_bolus_time">Time (hours)</string>
    <string name="hint_activity_journal_entry_details_percent_up_front">Percent Now</string>
    <string name="hint_activity_journal_entry_details_percent_over_time">Percent Over Time</string>
    <string name="title_activity_food_list_result">FoodListResultActivity</string>
    <string name="title_activity_create_new_journal_entry">CreateNewJournalEntryActivity</string>
</resources>
